<resources>
    <string name="app_name">Our chat</string>
    <string name="login_email_edit_text_hint">Enter your email address</string>
    <string name="login_password_edit_text_hint">Enter your password</string>
    <string name="enter_your_user_name">Enter your user name</string>
    <string name="new_user">Don\'t have an account?</string>
    <string name="sign_up">Create an account</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="login_to_continue">Log in to your account to continue</string>
    <string name="create_account">Create an account</string>
    <string name="sign_up_to_continue">Sign up to get started</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="username_label">Username</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="social_login">Social login</string>
    <string name="wrong_email_format">Wrong email format</string>
    <string name="password_size">Password must be at least 6 characters</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="add_friend">Add friend</string>
    <string name="search">Search</string>
    <string name="about_me">Bio</string>
    <string name="edit">Edit</string>
    <string name="friends">Friends</string>
    <string name="select_profile_picture">Select profile picture</string>
    <string name="take_new_profile_picture">Take new profile picture</string>
    <string name="uploading">Uploading...</string>
    <string name="type_something_to_let_your_friends_know_you_better">Type something to let your friends know you better</string>
    <string name="submit">Submit</string>
    <string name="cancel_request">Cancel request</string>
    <string name="friend_request_not_sent">Send friend request</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="incoming_requests">Incoming requests</string>
    <string name="no_incoming_requests">No incoming requests</string>
    <string name="no_friends_yet">No friends yet</string>
    <string name="find_friends">Find friends</string>
    <string name="profile">Profile</string>
    <string name="no_chat_history_yet_click_chat_button_to_start_chatting">No chat history yet, Click chat button to start chatting</string>
    <string name="no_chat_history_yet">No chat history yet</string>
    <string name="click_chat_button_to_start_chatting">Click chat button to start chatting</string>
    <string name="no_one_to_chat_with_yet_add_more_friend_to_get_going">No one to chat with yet, Add friends to get going!</string>
    <string name="type_a_message">Type a message</string>
    <string name="empty_message">Can\'t send empty message</string>




    <string name="you">You: %1$s</string>
    <string name="other">%1$s: %2$s</string>
    <string name="other_image">%1$s sent an image</string>
    <string name="other_file">%1$s sent a file</string>
    <string name="no_users_to_add_yet">No users to add yet.</string>
    <string name="you_sent_image">You sent an image</string>
    <string name="send_file">Send file</string>
    <string name="send_picture">Send picture</string>
    <string name="you_sent_file">you sent a file</string>
    <string name="you_sent_record">you sent a voice record</string>
    <string name="other_record">%1$s sent a voice record</string>
    <string name="delete_from_friends">Remove from friends</string>
    <string name="no_friends">User has no friends yet</string>
    <string name="search_results">SEARCH RESULTS</string>
    <string name="no_users_found">No users found</string>
    <string name="try_different_name">Try a different name or check your spelling.</string>
    <string name="search_by_name">Search by name or username</string>
    <string name="check_back_later">Check back later for new friend requests</string>
    <string name="messages">Messages</string>
    <string name="account">Account</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_profile">My profile</string>
    <string name="no_bio_yet">No bio yet</string>
    <string name="user_profile">%1$s\'s profile</string>
    <string name="search_for_friends">Search for friends</string>
    <string name="chatting_with">Chatting with %1$s</string>
    <string name="contacts">Contacts</string>
    <string name="received_friend_requests">Received friend requests</string>
    <string name="recently_active">RECENTLY ACTIVE</string>
    <string name="active_minutes_ago">Active %1$sm ago</string>
    <string name="active_hours_ago">Active %1$sh ago</string>
    <string name="active_days_ago">Active %1$sd ago</string>
    <string name="just_now">Just now</string>
    <string name="login_fragment">Login</string>
    <string name="signup_fragment">Sign Up</string>
    <string name="profile_fragment">Profile</string>
    <string name="find_user_fragment">Find Friends</string>
    <string name="different_user_profile">User Profile</string>
    <string name="chat_fragment">Chat</string>
    <string name="chat">Chat</string>
    <string name="zero">0</string>
    <string name="error_loading_incoming_requests">Error while loading incoming friend requests</string>
    <string name="request_deleted">Request deleted</string>
    <string name="download_file_question">Do you want to download clicked file?</string>
    <string name="finished_recording">Finished recording</string>
    <string name="recording">Recording</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="no_file_manager">No suitable file manager was found on this device</string>
    <string name="select_picture">Select Picture</string>
    <string name="permission_needed">Permission is needed for this feature to work</string>
    <string name="grant">Grant</string>
    <string name="sign_up_successful">Sign up successful</string>
    <string name="check_email_password">Check email and password then retry.</string>
    <string name="login_successful">Login successful</string>

</resources>

