<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_view"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.ganainy.ourchat.ui.login.LoginFragment"
        android:label="@string/login_fragment">
        <action
            android:id="@+id/action_loginFragment_to_signupFragment"
            app:destination="@id/signupFragment" />
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@+id/nav_view" />
    </fragment>
    <fragment
        android:id="@+id/signupFragment"
        android:name="com.ganainy.ourchat.ui.signup.SignupFragment"
        android:label="@string/signup_fragment">
        <action
            android:id="@+id/action_signupFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@+id/nav_view" />
        <action
            android:id="@+id/action_signupFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.ganainy.ourchat.ui.home.HomeFragment"
        android:label="@string/messages"
        tools:layout="@layout/home_fragment">
        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@+id/nav_view" />
        <action
            android:id="@+id/action_homeFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_homeFragment_to_findUserFragment"
            app:destination="@id/findUserFragment" />
        <action
            android:id="@+id/action_homeFragment_to_incomingRequestsFragment"
            app:destination="@id/incomingRequestsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_contactsFragment"
            app:destination="@id/contactsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_chatFragment"
            app:destination="@id/chatFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.ganainy.ourchat.ui.profile.ProfileFragment"
        android:label="@string/profile_fragment">
        <action
            android:id="@+id/action_profileFragment_to_findUserFragment"
            app:destination="@id/findUserFragment" />
        <action
            android:id="@+id/action_profileFragment_to_differentUserProfile"
            app:destination="@id/differentUserProfile" />
        <action
            android:id="@+id/action_profileFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@+id/nav_view" />
    </fragment>
    <fragment
        android:id="@+id/findUserFragment"
        android:name="com.ganainy.ourchat.ui.findUser.FindUserFragment"
        android:label="@string/find_user_fragment"
        tools:layout="@layout/find_user_fragment">
        <action
            android:id="@+id/action_findUserFragment_to_differentUserProfile"
            app:destination="@id/differentUserProfile">

        </action>
    </fragment>
    <fragment
        android:id="@+id/differentUserProfile"
        android:name="com.ganainy.ourchat.ui.different_user_profile.DifferentUserProfileFragment"
        android:label="@string/different_user_profile" />
    <fragment
        android:id="@+id/incomingRequestsFragment"
        android:name="com.ganainy.ourchat.ui.incoming_requests.IncomingRequestsFragment"
        android:label="@string/incoming_requests" />
    <fragment
        android:id="@+id/contactsFragment"
        android:name="com.ganainy.ourchat.ui.contacts.ContactsFragment"
        android:label="@string/contacts">
        <action
            android:id="@+id/action_contactsFragment_to_findUserFragment"
            app:destination="@id/findUserFragment" />
        <action
            android:id="@+id/action_contactsFragment_to_chatFragment"
            app:destination="@id/chatFragment" />
    </fragment>
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.ganainy.ourchat.ui.chat.ChatFragment"
        android:label="@string/chat_fragment">
        <action
            android:id="@+id/action_chatFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@+id/nav_view" />
    </fragment>
</navigation>
